--- a/src/main/resources/templates/admin/tables/users-table.html
+++ b/src/main/resources/templates/admin/tables/users-table.html
@@ -5,26 +5,34 @@
     <title>Users</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
     <header th:insert="blocks/headers :: header-admin-page"></header>
 
     <div class="container mt-5 mb-5">
-        <h1>Список пользователей</h1><br>
-        <a href="/adminpage/person/add?role=ROLE_USER" class="btn btn-success">Добавить</a><br><br>
+        <h1 class="text-center">Список пользователей</h1><br>
+
+        <div class="row">
+            <div class="col-md-2"><a href="/adminpage/person/add?role=ROLE_USER" class="btn btn-success">Добавить</a></div>
+            <div class="col-md-4"></div>
+            <div class="col-md-6"><input class="form-control" id="inputFilter" onkeyup="filterFunction()" type="text" placeholder="Поиск"></div>
+        </div>
+        <br>
 
         <table class="table table-bordered table-hover">
             <thead>
                 <th th:each="h : ${headers}" th:text="${h}"/>
             </thead>
-            <tbody>
+            <tbody id="usersTable">
                 <tr th:each="u, iter : ${users}"> 
-                    <td th:text="${iter.index}+1"></td>
-                    <td th:text="${u.sername}"></td>
-                    <td th:text="${u.name}"></td>
-                    <td th:text="${u.email}"></td>
-                    <td><span th:text="${u.status}" th:class="${u.status} == 'В процессе' ? 'badge badge-danger rounded-pill d-inline' : 'badge badge-success rounded-pill d-inline'"/></td>
+                    <td class="filterData" th:text="${iter.index}+1"></td>
+                    <td class="filterData" th:text="${u.sername}"></td>
+                    <td class="filterData" th:text="${u.name}"></td>
+                    <td class="filterData" th:text="${u.email}"></td>
+                    <td class="filterData"><span th:text="${u.status}" th:class="${u.status} == 'В процессе' ? 'badge badge-danger rounded-pill d-inline' : 'badge badge-success rounded-pill d-inline'"/></td>
                     <td><a th:href="'/adminpage/user/' + ${u.id}">Подробнее</a></td>
                 </tr>
             </tbody>
@@ -32,6 +40,18 @@
     </div>
 
     <div th:insert="blocks/footer :: footer"></div>
+
+    <script> 
+        $(document).ready(function(){
+          $("#inputFilter").on("keyup", function() {
+            var value = $(this).val().toLowerCase();
+            $("#usersTable tr").filter(function() {
+              $(this).toggle($(this).children('.filterData').text().toLowerCase().indexOf(value) > -1)
+            });
+          });
+        });
+    </script>
+
 </body>
 
 </html>
