--- a/src/main/resources/templates/user/questionnaires/questionnaires-list.html
+++ b/src/main/resources/templates/user/questionnaires/questionnaires-list.html
@@ -5,9 +5,8 @@
     <title>Questionnaires</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
@@ -20,7 +19,9 @@
     <div class="p-3 mb-2 bg-light text-dark">
       <div class="row">
         <div class="col-md-8" data-toggle="collapse" href="#collapseCAPS" role="button" aria-expanded="false" aria-controls="collapseCAPS">
-          <strong>1. Шкала для клинической диагностики ПТСР (Clinical-administered PTSD Scale - CAPS)</strong>
+          <span data-toggle="tooltip" data-placement="bottom" title="Нажмите, чтобы открыть/закрыть информацию о данном опроснике">
+            <strong>1. Шкала для клинической диагностики ПТСР (Clinical-administered PTSD Scale - CAPS)</strong>
+          </span>
         </div>
         <div class="col-md-4 text-center"><a href="/questionnaires/CAPS" class="btn btn-primary w-50">Пройти</a></div>
       </div>
@@ -36,7 +37,9 @@
     <div class="p-3 mb-2 bg-light text-dark">
       <div class="row">
         <div class="col-md-8" data-toggle="collapse" href="#collapseIESR" role="button" aria-expanded="false" aria-controls="collapseIESR">
-          <strong>2. Шкала оценки влияния травматического события (Impact of Event Scale-R - IES-R)</strong>
+          <span data-toggle="tooltip" data-placement="bottom" title="Нажмите, чтобы открыть/закрыть информацию о данном опроснике">
+            <strong>2. Шкала оценки влияния травматического события (Impact of Event Scale-R - IES-R)</strong>
+          </span>
         </div>
         <div class="col-md-4 text-center"><a href="/questionnaires/IESR" class="btn btn-primary w-50">Пройти</a></div>
       </div>
@@ -57,7 +60,9 @@
     <div class="p-3 mb-2 bg-light text-dark">
       <div class="row">
         <div class="col-md-8" data-toggle="collapse" href="#collapseBHS" role="button" aria-expanded="false" aria-controls="collapseBHS">
-          <strong>3. Шкала Безнадежности Бека (Beck Hopelessness Scale, BHS)</strong>
+          <span data-toggle="tooltip" data-placement="bottom" title="Нажмите, чтобы открыть/закрыть информацию о данном опроснике">
+            <strong>3. Шкала Безнадежности Бека (Beck Hopelessness Scale, BHS)</strong>
+          </span>
         </div>
         <div class="col-md-4 text-center"><a href="/questionnaires/BHS" class="btn btn-primary w-50">Пройти</a></div>
       </div>
@@ -73,7 +78,9 @@
     <div class="p-3 mb-2 bg-light text-dark">
       <div class="row">
         <div class="col-md-8" data-toggle="collapse" href="#collapseTOP8" role="button" aria-expanded="false" aria-controls="collapseTOP8">
-          <strong>4. Опросник для оценки терапевтической динамики ПТСР «Treatment Outcome PTSD Scale» (TOP-8)</strong>
+          <span data-toggle="tooltip" data-placement="bottom" title="Нажмите, чтобы открыть/закрыть информацию о данном опроснике">
+            <strong>4. Опросник для оценки терапевтической динамики ПТСР «Treatment Outcome PTSD Scale» (TOP-8)</strong>
+          </span>
         </div>
         <div class="col-md-4 text-center"><a href="/questionnaires/TOP8" class="btn btn-primary w-50">Пройти</a></div>
       </div>
@@ -88,6 +95,20 @@
   </div>
   
   <div th:insert="blocks/footer :: footer"></div>
+ 
+  <script>
+    $('[data-toggle="tooltip"]').tooltip()
+  </script>
     
 </body>
+
+<style>
+
+  .tooltip-inner {
+    background-color: #000000;
+    max-width: 40rem;
+  }
+
+</style>
+
 </html>
