--- a/src/main/resources/templates/user/questionnaires/questionnaires-results.html
+++ b/src/main/resources/templates/user/questionnaires/questionnaires-results.html
@@ -5,9 +5,8 @@
     <title>Questionnaires</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
@@ -21,7 +20,9 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 text-center" data-toggle="collapse" href="#collapseCAPS" role="button" aria-expanded="false" aria-controls="collapseCAPS">
-                <strong>Шкала для клинической диагностики ПТСР (Clinical-administered PTSD Scale - CAPS)</strong>
+                    <span data-toggle="tooltip" data-placement="bottom" title="Нажмите, чтобы открыть/закрыть результаты данного вида опросника">
+                        <strong>Шкала для клинической диагностики ПТСР (Clinical-administered PTSD Scale - CAPS)</strong>
+                    </span>                
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -63,7 +64,9 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 text-center" data-toggle="collapse" href="#collapseIESR" role="button" aria-expanded="false" aria-controls="collapseIESR">
-                <strong>Шкала оценки влияния травматического события (Impact of Event Scale-R - IES-R)</strong>
+                    <span data-toggle="tooltip" data-placement="bottom" title="Нажмите, чтобы открыть/закрыть результаты данного вида опросника">
+                        <strong>Шкала оценки влияния травматического события (Impact of Event Scale-R - IES-R)</strong>
+                    </span>                
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -106,7 +109,9 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 text-center" data-toggle="collapse" href="#collapseBHS" role="button" aria-expanded="false" aria-controls="collapseBHS">
-                <strong>Шкала Безнадежности Бека (Beck Hopelessness Scale, BHS)</strong>
+                    <span data-toggle="tooltip" data-placement="bottom" title="Нажмите, чтобы открыть/закрыть результаты данного вида опросника">
+                        <strong>Шкала Безнадежности Бека (Beck Hopelessness Scale, BHS)</strong>
+                    </span>                
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -147,7 +152,9 @@
             <div class="row">
                 <div class="col-md-1"></div>
                 <div class="col-md-10 text-center" data-toggle="collapse" href="#collapseTOP8" role="button" aria-expanded="false" aria-controls="collapseTOP8">
-                <strong>Опросник для оценки терапевтической динамики ПТСР «Treatment Outcome PTSD Scale» (TOP-8)</strong>
+                    <span data-toggle="tooltip" data-placement="bottom" title="Нажмите, чтобы открыть/закрыть результаты данного вида опросника">
+                        <strong>Опросник для оценки терапевтической динамики ПТСР «Treatment Outcome PTSD Scale» (TOP-8)</strong>
+                    </span>                
                 </div>
                 <div class="col-md-1"></div>
             </div>
@@ -184,6 +191,10 @@
     </div>
    
     <div th:insert="blocks/footer :: footer"></div>
+
+    <script>
+        $('[data-toggle="tooltip"]').tooltip()
+    </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script> 
 
@@ -332,4 +343,14 @@
     </script>
     
 </body>
+
+<style>
+
+    .tooltip-inner {
+        background-color: #000000;
+        max-width: 40rem;
+    }
+  
+</style>
+
 </html>
