--- a/src/main/resources/templates/user/questionnaires/questionnaires-list.html
+++ b/src/main/resources/templates/user/questionnaires/questionnaires-list.html
@@ -32,13 +32,7 @@
       Повторно можно будет пройти опросник через 30 дней после предыдущего заполнения.
       <br><br>
     </div>
-
-    <div class="collapse" id="collapseCAPS">
-      <div class="card card-body">
-        <p><u>Период прохождений:</u> раз в месяц</p>
-        <p>По результатам прохождения будут получены значения <b>частоты</b> и <b>интенсивности</b> проявления индивидуальных симптомов расстройства.</p>
-      </div>
-    </div><br>
+    <div th:insert="blocks/collapses :: collapseCAPS"></div>
 
 
     <div class="p-3 mb-2 bg-light text-dark">
@@ -56,18 +50,7 @@
       Еще не прошла неделя с последнего прохождения!
       <br><br>
     </div>
-
-    <div class="collapse" id="collapseIESR">
-      <div class="card card-body">
-        <p><u>Период прохождений:</u> раз в неделю</p>
-        По результатам прохождения будут получены следующие результаты:<br>
-        <ol>
-          <li><b>Шкала «вторжение» (IN)</b> - позволяет выявить ночные кошмары, навязчивые мысли, связанные с травмирующим событием</li>
-          <li><b>Шкала «избегание» (AV)</b> - позволяет выявить симптомы избегания, включающие попытки смягчения или избегания переживаний, связанных с воздействием кризисного события</li>
-          <li><b>Шкала «физиологическое возбуждение» (AR)</b> - позволяет выявить злость и раздражительность, гипертрофированную реакцию испуга, психофизиологическое возбуждение, обусловленное воспоминаниями о событии, бессоницу. </li>
-        </ol>
-      </div>
-    </div><br>
+    <div th:insert="blocks/collapses :: collapseIESR"></div>
 
 
     <div class="p-3 mb-2 bg-light text-dark">
@@ -85,13 +68,7 @@
       Еще не прошла неделя с последнего прохождения!
       <br><br>
     </div>
-
-    <div class="collapse" id="collapseBHS">
-      <div class="card card-body">
-        <p><u>Период прохождений:</u> раз в неделю</p>
-        <p>По результатам прохождения будет оценена выраженность негативного отношения по отношению к собственному будущему.</p>
-      </div>
-    </div><br>
+    <div th:insert="blocks/collapses :: collapseBHS"></div>
 
 
     <div class="p-3 mb-2 bg-light text-dark">
@@ -109,13 +86,7 @@
       Еще не прошла неделя с последнего прохождения!
       <br><br>
     </div> 
-
-    <div class="collapse" id="collapseTOP8">
-      <div class="card card-body">
-        <p><u>Период прохождений:</u> раз в неделю</p>
-        <p>Помогает оценить, насколько мешали симптомы на прошлой неделе.</p>
-      </div>
-    </div><br>
+    <div th:insert="blocks/collapses :: collapseTOP8"></div>
 
   </div>
   
