--- a/src/main/resources/templates/blocks/headers.html
+++ b/src/main/resources/templates/blocks/headers.html
@@ -17,7 +17,7 @@
       <div class="collapse navbar-collapse d-lg-flex">
         <a class="navbar-brand col-lg-3 me-0" href="#">Ваш аккаунт</a>
         <ul class="navbar-nav col-lg-6 justify-content-lg-center">
-          <li class="nav-item"> <a class="p-2 text-dark" href="/">Главная страница</a> </li>
+          <li class="nav-item"> <a class="p-2 text-dark" href="/main">Главная страница</a> </li>
           <li class="nav-item"> <a class="p-2 text-dark" href="/questionnaires">Опросники</a> </li>
           <li class="nav-item"> <a class="p-2 text-dark" href="/questionnaires/results">Результаты опросов</a> </li>
           <li class="nav-item"> <a class="p-2 text-dark" href="/drugs">Ваши лекарства</a> </li>
@@ -42,9 +42,9 @@
       <div class="collapse navbar-collapse d-lg-flex">
         <a class="navbar-brand col-lg-3 me-0" href="#">Ваш аккаунт</a>
         <ul class="navbar-nav col-lg-6 justify-content-lg-center">
-          <li class="nav-item"> <a class="p-2 text-dark" href="/adminpage/users">Список пользователей</a> </li>
-          <li class="nav-item"> <a class="p-2 text-dark" href="/adminpage/admins">Список администраторов</a> </li>
-          <li class="nav-item"> <a class="p-2 text-dark" href="/adminpage/drugs">Список лекарств</a> </li>
+          <li class="nav-item"> <a class="p-2 text-dark" href="/adminpage/users">Пациенты</a> </li>
+          <li class="nav-item"> <a class="p-2 text-dark" href="/adminpage/admins">Администраторы</a> </li>
+          <li class="nav-item"> <a class="p-2 text-dark" href="/adminpage/drugs">Лекарственные средства</a> </li>
           <li class="nav-item"> <a class="p-2 text-dark" href="/adminpage/profile">Ваш профиль</a> </li>
         </ul>
   
